<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_credit_card_24"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_exchange"
        android:icon="@drawable/ic_currency_exchange_24"
        android:title="@string/title_exchange" />

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_mood_24"
        android:title="@string/title_goals" />

</menu>