<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="+" />

        <RadioButton
            android:id="@+id/radio_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select Card"
        android:padding="16dp" />

    <Switch
        android:id="@+id/switch_recurring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Is Recurring" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="autofillHintAmount"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:padding="16dp" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="autofillHintDescription"
        android:hint="@string/hint_description"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="autofillHintDate"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:padding="16dp" />
</LinearLayout>
